# timeseries-final

./: .env.example  .gitignore  pyproject.toml
data/: 한국전력거래소_일별 최대전력기준 전력수급 정보_2010-2025.csv
data/processed/: calendar_2010_2025.csv  cdd_hdd_2010_2025.csv  exog_daily_2010_2025.csv  extreme_flags_2010_2025.csv  feels_like_daily_2010_2025.csv  ip_total_daily_2010_2025.csv  peak_mw_2010_2025.csv  pop_total_2010_2025.csv  pop_total_daily_2010_2025.csv  sido_weights_2010_2025.csv  weather_nationwide_2010_2025.csv
data/raw/: holidays_2010_2025.csv  kosis_ip_total_2010_2025.csv  kosis_population_sido_2010_2025.csv  한국전력거래소_일별 최대전력기준 전력수급 정보_1993-2026.csv
docs/: dependent_var.md  independent_var.md  project_goals.md  기말 팀 프로젝트 계획서_20260524.docx
docs/research_log/: 2026-05-25_0717_종속변수_기간확정_2010-2025.md  2026-05-25_1537_대표관측소_인구가중평균.md  2026-05-25_1547_시도인구가중치_산출.md  2026-05-25_1616_ASOS_기상자료_수집.md  2026-05-25_1623_기상결측_대체보간_방법론.md  2026-05-25_1812_전국가중평균_산출.md  2026-05-25_1937_경제인구_추세변수_추가결정.md  2026-05-25_2124_냉방도일_난방도일_정의.md  2026-05-25_2139_체감온도_공식_확정.md  (+10 more)
notebooks/: eda.ipynb  modeling.ipynb
src/: build_calendar.py  build_cdd_hdd.py  build_exog_daily.py  build_extreme_flags.py  build_feels_like.py  build_ip_daily.py  build_peak_mw.py  build_pop_total.py  build_report_figures.py  build_sido_weights.py  build_team_report.py  build_weather_nationwide.py  collect_asos.py  collect_asos_hourly.py  collect_holidays.py  collect_kosis_ip.py  collect_kosis_population.py  impute_asos.py  impute_asos_hourly.py  model_arimax.py  model_arimax_v2.py  model_arimax_v3.py
(+46 files in other folders)
