[project]
name = "timeseries-final"
version = "0.1.0"
description = "KPX daily peak power load forecasting with ARIMAX/SARIMAX (2010-2025)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "python-docx>=1.1",
]
